# aruco3

./: Cargo.toml  README.md
assets/: approximate_quad.ipynb
benches/: detect_markers.rs
examples/: macroquad_detect.rs  webcam.rs  webcam_kamera.rs  webcam_nokhwa.rs
src/: aruco.rs  dictionaries.rs  lib.rs  pinhole.rs  pose.rs
src/pose/: mod.rs
tests/: integration_test_randomized_e2e.rs
tests/common/: mod.rs  software_renderer.rs
