[package]
name = "aruco3"
version = "0.1.0"
edition = "2021"

[dependencies]
image = { version = "0.25", features = [] }
imageproc = { version = "0.25", features = [] }
nalgebra = { version = "0.33", features = [] }
phf = { version = "0.11", default-features = false, features = ["macros"] }
rayon = { version = "1.10" }

[dev-dependencies]
# For benchmarking and debugging:
ab_glyph = "*"
divan = "0.1.17"
rand = "0.9"
# For the webcam demo:
minifb = "0.28"
nokhwa = { version = "0.10.7", features = ["input-native", "output-threaded"] }
kamera = "0.0.2"
nalgebra-glm = "*"

[[bench]]
name = "detect_markers"
harness = false

# For flamegraph --bench detect_markers
#[profile.bench]
#debug=true
